--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://marius-a-mueller.github.io/markdown-previewer",
   "name": "markdown-previewer",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jquery": "^3.5.29",
     "jquery": "^3.7.1",
+    "marked": "^11.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
